Introduce approximate and sketch based bin distribution, benchmarks and bin distribution quality metrics